2006-05-06 Dom Lachowicz <cinamod@hotmail.com>

	* configure.in: Bump version number to indicate an unstable series
	* src/pwl.[ch]: New personal wordlist implementation, based on Trie.
	Thanks to Ryan Kelly <ryan-bugs@rfk.id.au> (bug 10212).
	* src/enchant.c: Ditto
	
2006-04-23 Dom Lachowicz <cinamod@hotmail.com>

	* configure.in: --with-aspell-prefix didn't work
	
2006-03-20 Dom Lachowicz <cinamod@hotmail.com>

	* configure.in: relocatable_library undefined command in configure;
	Bug 10134, from Pierre Joye <pierre.php@gmail.com>

	* configure.in: configure does not check if aspell/pspell headers exist;
	Bug 10135, based on a patch from Pierre Joye
	
2003-07-13 Dom Lachowicz <cinamod@hotmail.com>
	* Initial import