@@ -1,3 +1,8 @@
+2006-07-22 Dom Lachowicz <cinamod@hotmail.com>
+
+	* src/*/Makefile.am: add '-module' to LDFLAGS so that things get
+	built correctly on Mac OSX (bug 10398)
+	
 2006-05-06 Dom Lachowicz <cinamod@hotmail.com>
 
 	* configure.in: Bump version number to indicate an unstable series
